<resources>
    <string name="app_name">Sudoku</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="title_activity_player_profile">PlayerProfileActivity</string>
    <string name="title_activity_results_historic">ResultsHistoricActivity</string>
    <string name="title_activity_choose_client_server">ChooseClientServerActivity</string>
    <string name="title_activity_choose_difficulty">ChooseDifficultyActivity</string>
    <string name="title_activity_game_board_m1">GameBoardM1Activity</string>
    <string name="strUmJogador">Um Jogador</string>
    <string name="strDoisJogadores">Dois Jogadores</string>
    <string name="strJogoEmRede">Jogo em Rede</string>
    <string name="strCliente">Cliente</string>
    <string name="strServidor">Servidor</string>
    <string name="strFacil">Fácil</string>
    <string name="strMedio">Médio</string>
    <string name="strDificil">Difícil</string>
    <string name="strNomeRafael">Rafael Sá - 21270564</string>
    <string name="strNomeDavid">David Paiva - 21260607</string>
    <string name="strNomeFrancisco">Francisco Silva - 21270547</string>
    <string name="strDescCreditos">Unidade Curricular de Arquiteturas Móveis | Engenharia Informática | DEIS-ISEC 2019/2020</string>
    <string name="strSobreNos">Sobre Nós</string>
    <string name="strPerfilJogador">Perfil Jogador</string>
    <string name="strEditarPerfil">Editar Perfil</string>
    <string name="strHistoricoResultados">Histórico de Resultados</string>
    <string name="strTirarFotografia">Tirar Fotografia</string>
    <string name="strNome">Nome</string>
    <string name="strSeuNome">Seu Nome</string>
    <string name="strGuardar">Guardar</string>
    <string name="strSemNome">Sem Nome</string>
    <string name="strNotas">Notas</string>
    <string name="strtempo_restante">Tempo: </string>
    <string name="strVer_Solucao">Ver Solução</string>
    <string name="strSairJogo">Sair do Jogo</string>
    <string name="strCancelar">Cancelar</string>
    <string name="strConfirmar">Confirmar</string>
    <string name="strDialogMSG">Deseja voltar à página principal?</string>
    <string name="strSolutionMSG">Deseja ver a solução?</string>
    <string name="strCarregarJogo">Carregar Jogo</string>
    <string name="strPorFavorAguarde">Por favor, aguarde...</string>
    <string name="strApagar">Apagar</string>
    <string name="strPontos">Pontos</string>
    <string name="strJogador_1">Jogador 1 </string>
    <string name="strPontos_">Pontos:</string>
    <string name="strJogador_2">Jogador 2 </string>
    <string name="strTerminouJogo">Parabéns! Ganhou o jogo!</string>
    <string name="strGanhou">Ganhou</string>
    <string name="strOK">Ok</string>
    <string name="strVencedor">Vencedor</string>
    <string name="strmodo_de_jogo">Modo de Jogo</string>
    <string name="str_tempo">Tempo</string>
    <string name="str_n_meros_acertados">Números Acertados</string>
    <string name="strPassarParaM1">Deseja passar o jogo para o modo Um Jogador?</string>
    <string name="str_jogador_3">Jogador 3</string>
    <string name="strEsperarClientes">Aguardando Clientes...</string>
    <string name="strIniciarJogo">O jogo irá iniciar automaticamente quando estiverem 2 clientes conectados! Pode também iniciar o jogo apenas com 1 cliente conectado!</string>
    <string name="strIniciar">Iniciar</string>
    <string name="str_erro_ligacao_net">Erro: Não existe ligação à Internet!</string>
    <string name="str_ip_do_servidor">IP do Servidor</string>
    <string name="strSemJogadoresLigados">Não existe nenhum cliente conectado!</string>
    <string name="str_erro_ligaçãoCliente">Impossível estabelecer ligação ao servidor com o IP:</string>
    <string name="strErroComunicacao">Erro: Ocorreu um erro de comunicação!</string>
    <string name="strNovoClienteLigado">Cliente conectado!</string>
    <string name="strEsperarInicio">Aguardando o início do jogo...</string>
    <string name="strEsperarInicioServidor">Aguarde que o servidor inicie o jogo!</string>
    <string name="strPerdeuJogo">Perdeu o jogo! Boa sorte para a próxima vez!</string>
    <string name="strPerder">Perdeu</string>
</resources>
