<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_example1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context="pt.amov.xicorafapaiva.sudoku.GameViews.ResultsHistoricActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e0e0e0"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#c0c0c0"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/strVencedor"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#a0a0a0"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/strmodo_de_jogo"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#c0c0c0"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/str_tempo"
            android:textSize="14sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#a0a0a0"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/str_n_meros_acertados"
            android:textAlignment="center"
            android:textSize="14sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
