<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayoutM2"
    tools:context=".GameViews.GameBoardActivity">



    <FrameLayout
        android:id="@+id/flSudoku"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flSudoku"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="10sp">

            <TextView
                android:id="@+id/tvNomePlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="7sp"
                android:text="@string/strJogador_1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPontosJogador1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvStrPontosJogador1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="4sp"
                android:text="@string/strPontos"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="10sp">

            <TextView

                android:id="@+id/tvNomePlayer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strJogador_2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPontosJogador2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:text="0"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvStrPontosJogador2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="4sp"
                android:text="@string/strPontos"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="10sp">

            <TextView

                android:id="@+id/tvNomePlayer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_jogador_3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPontosJogador3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:text="0"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvStrPontosJogador3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="4sp"
                android:text="@string/strPontos"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:text="@string/strtempo_restante"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvTempoJogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="30"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNumber1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onNumberPress"
                android:text="1" />

            <Button
                android:id="@+id/btnNumber2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onNumberPress"
                android:text="2" />

            <Button
                android:id="@+id/btnNumber3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onNumberPress"
                android:text="3" />

            <Button
                android:id="@+id/btnNumber4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onNumberPress"
                android:text="4" />

            <Button
                android:id="@+id/btnNumber5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onNumberPress"
                android:text="5" />

            <Button
                android:id="@+id/btnNumber6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onNumberPress"
                android:text="6" />

            <Button
                android:id="@+id/btnNumber7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onNumberPress"
                android:text="7" />

            <Button
                android:id="@+id/btnNumber8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onNumberPress"
                android:text="8" />

            <Button
                android:id="@+id/btnNumber9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onNumberPress"
                android:text="9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnNotas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onBtnNotas"
                android:text="@string/strNotas" />

            <Button
                android:id="@+id/btnApagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onBtnApagar"
                android:text="@string/strApagar" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>